# test-automation

./: .gitignore  Makefile  conftest.py  pyproject.toml  pytest.ini
configs/: config.py
helpers/: auth.py
pages/: home_page.py  login_page.py
tests/db/: test_user_record.py
tests/ui/: test_login.py
utils/: db_utils.py
